<resources>
    <string name="app_name">dogbin</string>
    <string name="publish">Publish</string>
    <string name="custom_url">Custom URL</string>
    <string name="your_text">Your text</string>
    <string name="settings">Settings</string>
    <string name="network">Network</string>
    <string name="use_proxy">Use proxy</string>
    <string name="use_proxy_summary">For users from Russia</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="invalid_login_or_password">Incorrect login or password</string>
    <string name="my_notes">My notes</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="copied_to_clipboard">%s copied to clipboard</string>
    <string name="history">History</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="requires_auth">Authorization</string>
    <string name="socks_proxy">Enter SOCKS4/5 proxy</string>
    <string name="you_need_to_setup_proxy">You need to setup proxy host and port</string>
    <string name="some_links">Some links</string>
    <string name="news_channel">Telegram channel</string>
    <string name="contact_developer">Contact developer</string>
    <string name="about_app">About app</string>
    <string name="log_out">Log out</string>
    <string name="account">Account</string>
    <string name="log_in">Log in</string>
    <string name="dogbin_block_in_russia"></string>
    <string name="ui">UI</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_q">System depending theme</string>
    <string name="invalid_link">Link is already in use or invalid</string>
    <string name="error">Error: %s</string>
    <string name="error_during_register">Error during registration! Maybe user with the same login exists or password is weak</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear cache</string>
    <string name="cache_my">Cache only my notes</string>
    <string name="auto_clear_cache">Automatically clear cache</string>
    <string name="text_wrap">Text wrap</string>
    <string name="text_wrap_no">No wrap</string>
    <string name="text_wrap_word">Word wrap</string>
    <string name="text_wrap_break">Break word</string>
    <string name="creating_note">Create note</string>
    <string name="editing_note">Edit note</string>
    <string name="redirect_from_notes">Redirect from notes</string>
    <string name="loading">Loading...</string>
    <string name="source_code">Source code</string>
    <string name="invalid_port">Invalid port</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="accent_picker">Accent picker</string>
    <string name="donate">Donate</string>
    <string name="till_name">deletescape</string>
    <string name="till_role">Creator of dogbin</string>
    <string name="f0x1d_name">F0x1d</string>
    <string name="f0x1d_role">Creator of dogbin mobile</string>
    <string name="donate_text">Dogbin mobile is a ad-free open-source app. If you like it, please consider supporting dogbin mobile by making a little donation. You will also get access to accent picker as a gift!</string>
    <string name="donate_text_donated">A lot of thanks for supporting dogbin mobile!\nNow you have access to accent picker!</string>
    <string name="donate_text_error">Unable to get donation status. Please make sure you have Google Play Services installed and try restarting your device.</string>
    <string name="donate_text_pending">Your donation is pending. If it isn\'t applied automatically after you complete it, please restart dogbin mobile.</string>
    <string name="donate_text_theme_lock">This setting is available only to users, who supported dogbin mobile</string>
    <string name="dogbin_domain">Dogbin instance domain</string>
    <string name="no_touch">Change it only if you know what it is</string>
    <string name="domain_name_require1">Domain name must start with \"http\"</string>
    <string name="domain_name_require2">Domain name must end with \"/\"</string>
    <string name="cookies_cleared">Cookies were cleared</string>
    <string name="select_service">Select service</string>
    <string name="folders">Folders</string>
    <string name="module_v_old">Module SDK version is old, update it</string>
    <string name="hey">Hey!</string>
</resources>
