<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/about_app"
        app:icon="@drawable/ic_info_settings">

        <Preference
            android:title="@string/news_channel"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/omnibin" />
        </Preference>

        <Preference
            android:title="@string/contact_developer"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/f0x1d" />
        </Preference>

        <Preference
            android:title="@string/source_code"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/F0x1d/omnibin" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/donate"
        app:icon="@drawable/ic_donate">

        <Preference
            android:key="donate"
            android:title="@string/donate"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ui"
        app:icon="@drawable/ic_style">

        <SwitchPreferenceCompat
            android:key="dark_theme"
            android:title="@string/dark_theme"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:entries="@array/accents"
            android:entryValues="@array/accents_values"
            android:key="accent"
            android:title="@string/accent_picker"
            app:defaultValue="0"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account"
        app:icon="@drawable/ic_account_settings">

        <Preference
            android:key="username"
            android:selectable="false"
            android:title="@string/loading"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="log_in"
            android:title="@string/log_in"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/network"
        app:icon="@drawable/ic_vpn_settings">

        <Preference
            android:key="select_service"
            android:title="@string/select_service"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="note_redirect"
            android:title="@string/redirect_from_notes"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:key="dogbin_domain"
            android:summary="@string/no_touch"
            android:title="@string/dogbin_domain"
            app:defaultValue="https://del.dog/"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/cache"
        app:icon="@drawable/ic_cache">

        <SwitchPreferenceCompat
            android:key="cache_my"
            android:title="@string/cache_my"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="cache_nuke"
            android:title="@string/clear_cache"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>